fiz api not registered issue